--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
@@ -86,8 +87,8 @@
 }
 
 .logo {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 2.3em;
-  font-weight: 700;
-  font-style: italic;
+ font-family: "Ballet", cursive;
+  font-size: 2em;
+  font-weight: 1000;
+  font-style: normal;
 }
